--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,10 +72,10 @@ table {
 .button {
   background: #0096ff;
   color: #fff;
-  transition: 0.2s;
+  transition: background-color 0.2s;
 }
 .button:hover {
-  background: #36476c;
+  background-color: #36476c;
 }
 
 .main-nav-header {
@@ -93,7 +93,7 @@ table {
 }
 .main-nav-header__link.button {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 15px 20px;
   border-radius: 5px;
   color: #fff;
 }
@@ -112,7 +112,8 @@ table {
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 120px);
+  padding-top: 40px;
 }
 .hero h1 {
   font-family: "Open Sans", sans-serif;
@@ -133,7 +134,7 @@ table {
   width: 100%;
   height: 55px;
   left: 0px;
-  background: #00aae7;
+  background: #cfe9ff;
   top: -2px;
   display: block;
   position: absolute;
@@ -147,14 +148,13 @@ form.get-your-demo {
 form input[type=email] {
   display: inline-block;
   width: 400px;
-  height: 40px;
   font-size: 16px;
   box-sizing: border-box;
   outline: none;
   border: none;
   background: #f5f5f8;
   border-radius: 3px;
-  padding: 21px 10px 21px 20px;
+  padding: 12px 10px 12px 20px;
   font-family: "Open Sans", sans-serif;
 }
 form button[type=submit] {
@@ -167,10 +167,10 @@ form button[type=submit] {
   padding: 0px 20px;
   font-family: "Open Sans", sans-serif;
   cursor: pointer;
-  transition: 0.2s;
+  transition: background-color 0.2s;
 }
 form button[type=submit]:hover {
-  background: #36476c;
+  background-color: #36476c;
 }
 
 ::placeholder {
