--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -6,6 +6,8 @@ $dark-blue: #36476c;
 $light-blue: #cfe9ff;
 $blue:#0096ff;
 $white: #fff;
+$green: #1fb141;
+$red: #df000f;
 
 $input-background: #f5f5f8;
 $input-placeholder-text:#a2abbe;
